--- a/appveyor.yml
+++ b/appveyor.yml
@@ -46,6 +46,9 @@ clone_depth: 5                      # clone entire repository history if not def
 hosts:
   queue-server: 127.0.0.1
   db.server.com: 127.0.0.2
+  # Temporary solution advised by appveyor
+  # See: https://appveyor.statuspage.io/incidents/m2vdvw39kdk8
+  api.nuget.org: 93.184.221.200
   
 # build cache to preserve files/folders between builds
 cache:
@@ -57,12 +60,7 @@ cache:
 # scripts that run after cloning repository
 install:
   # by default, all script lines are interpreted as batch
-  - echo This is batch
-  # to run script as a PowerShell command prepend it with ps:
-  - ps: Write-Host 'This is PowerShell'
-  # batch commands start from cmd:
-  - cmd: echo This is batch again
-  - cmd: set MY_VAR=12345
+  - appveyor DownloadFile https://dist.nuget.org/win-x86-commandline/latest/nuget.exe
 
 # enable patching of AssemblyInfo.* files
 assembly_info:
@@ -75,8 +73,8 @@ assembly_info:
 
 # Automatically register private account and/or project AppVeyor NuGet feeds.
 nuget:
-  account_feed: true
-  project_feed: true
+  account_feed: false
+  project_feed: false
   disable_publish_on_pr: true     # disable publishing of .nupkg artifacts to
                                   # account/project feeds for pull request builds
 
@@ -117,7 +115,7 @@ build:
 # scripts to run before build
 before_build:
  - ps: .\before_build.ps1
- - cmd: nuget restore Cloudinary.sln
+ - cmd: appveyor-retry nuget restore  -verbosity detailed  -DisableParallelProcessing Cloudinary.sln
 # scripts to run *after* solution is built and *before* automatic packaging occurs (web apps, NuGet packages, Azure Cloud Services)
 before_package:
 
