--- a/appveyor.yml
+++ b/appveyor.yml
@@ -5,11 +5,6 @@
 # version format
 version: 1.0.{build}
 
-# branches to build
-branches:
-  # whitelist
-  only:
-    - master
 # Do not build on tags (GitHub and BitBucket)
 skip_tags: true
 
@@ -52,9 +47,6 @@ hosts:
   
 # build cache to preserve files/folders between builds
 cache:
-  - packages -> **\packages.config  # preserve "packages" directory in the root of build folder but will reset it if packages.config is modified
-  - projectA\libs
-  - node_modules                    # local npm modules
   - '%LocalAppData%\NuGet\Cache'
 
 # scripts that run after cloning repository
@@ -101,21 +93,21 @@ configuration: Release
 build:
   parallel: true                  # enable MSBuild parallel builds
   project: Cloudinary.sln         # path to Visual Studio solution or project
-  publish_wap: false              # package Web Application Projects (WAP) for Web Deploy
-  publish_wap_xcopy: false        # package Web Application Projects (WAP) for XCopy deployment
-  publish_azure: false            # package Azure Cloud Service projects and push to artifacts
   publish_nuget: false            # package projects with .nuspec files and push to artifacts
   publish_nuget_symbols: false    # generate and publish NuGet symbol packages
   include_nuget_references: false # add -IncludeReferencedProjects option while packaging NuGet artifacts
-
   # MSBuild verbosity level
   verbosity: minimal
 
+test:
+  assemblies:
+    - Cloudinary.Test.dll
+    - Cloudinary.NetCoreTest.dll
 
 # scripts to run before build
 before_build:
  - ps: .\before_build.ps1
- - cmd: appveyor-retry nuget restore  -verbosity detailed  -DisableParallelProcessing Cloudinary.sln
+ - cmd: appveyor-retry nuget restore -verbosity detailed -DisableParallelProcessing Cloudinary.sln
 # scripts to run *after* solution is built and *before* automatic packaging occurs (web apps, NuGet packages, Azure Cloud Services)
 before_package:
 
